fix: добавить alt в index.hmtl

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <p class="profile__description">Исследователь океана</p>
       </div>
-      <img class="add-button" src="./images/add-button.svg" alt="">
+      <img class="add-button" src="./images/add-button.svg" alt="Кнопка добавления записи">
     </section>
     <section class="elements">
       <article class="element">
