--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       </article>
     </section>
     <div class="overlay">
-      <div class="edit-form">
-        <form name="editProfile">
-          <h2 class="edit-form__title">Редактировать профиль</h2>
+      <div class="popup">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="edit-form" name="editProfile">
           <input class="edit-form__input" type="text" name="profileName" id="profileName" placeholder="Имя">
           <input class="edit-form__input" type="text" name="profileDescription" id="profileDescription" placeholder="О себе">
           <input class="edit-form__save" type="submit" value="Сохранить">
-          <button class="edit-form__close" type="button" aria-label="Закрыть окно"></button>
         </form>
+        <button class="popup__close" type="button" aria-label="Закрыть окно"></button>
       </div>
     </div>
   </main>
