fix: добавить alt и src изображениям, исправить эффект плавного открытия попапов

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <input class="form__save" type="submit" value="Создать">
         </form>
         <figure class="overlay__figure">
-          <img class="overlay__image" src="" alt="">
+          <img class="overlay__image" src="." alt=".">
           <figcaption class="overlay__caption"></figcaption>
         </figure>
         <button class="overlay__close" type="button" aria-label="Закрыть окно"></button>
@@ -53,7 +53,7 @@
   </footer>
   <template class="template-element">
     <article class="element">
-      <img class="element__image" src="" alt="">
+      <img class="element__image" src="." alt=".">
       <div class="element__body">
         <h2 class="element__title"></h2>
         <button class="element__like" type="button" aria-label="Мне нравится"></button>
