feat: создать классы Card и FormValidator

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место</title>
   <link rel="stylesheet" href="./pages/index.css">
-  <script src="./scripts/script.js" defer></script>
-  <script src="./scripts/validate.js" defer></script>
+  <script src="./scripts/script.js" type='module' defer></script>
 </head>
 <body class="page">
   <header class="header">
