--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,16 @@
   </header>
   <main>
     <section class="profile">
-      <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография профиля">
+      <div class="profile__avatar-wrapper">
+        <img class="profile__avatar" src="#" alt="Фотография профиля">
+        <img class="profile__avatar-overlay" src="<%=require('./images/pencil.svg')%>" alt="Иконка карандаша">
+      </div>
       <div class="profile__info">
         <div class="profile__edit-line">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name">#</h1>
           <button class="profile__edit" type="button" aria-label="Редактировать профиль"></button>
         </div>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description">#</p>
       </div>
       <button class="profile__add" type="button" aria-label="Добавить запись"></button>
     </section>
@@ -60,6 +63,26 @@
         <button class="popup__close" id="closeImagePopup" type="button" aria-label="Закрыть окно"></button>
       </section>
     </section>
+    <section class="popup popup_type_edit-avatar">
+      <section class="popup__container">
+        <form class="form" name="editAvatar" id="editAvatar" novalidate>
+          <h2 class="form__title">Обновить аватар</h2>
+          <input class="form__input" type="url" name="newAvatar" id="newAvatar" placeholder="Ссылка на картинку" required>
+          <span class="form__input-error" id="newAvatar-error"></span>
+          <input class="form__save" type="submit" value="Сохранить">
+        </form>
+        <button class="popup__close" id="closeNewCardPopup" type="button" aria-label="Закрыть окно"></button>
+      </section>
+    </section>
+    <section class="popup popup_type_confirm">
+      <section class="popup__container">
+        <form class="form" name="confirm" id="confirm" novalidate>
+          <h2 class="form__title">Вы уверены?</h2>
+          <input class="form__save" type="submit" value="Да">
+        </form>
+        <button class="popup__close" id="closeEditProfilePopup" type="button" aria-label="Закрыть окно"></button>
+      </section>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
@@ -69,7 +92,10 @@
       <img class="element__image" src="." alt=".">
       <div class="element__body">
         <h2 class="element__title"></h2>
-        <button class="element__like" type="button" aria-label="Мне нравится"></button>
+        <div class="element__like-wrapper">
+          <button class="element__like" type="button" aria-label="Мне нравится"></button>
+          <span class="element__like-count"></span>
+        </div>
       </div>
       <button class="element__trash" type="button" aria-label="Удалить"></button>
     </article>
