указать уникальные id, добавить недостающую точку с запятой

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
           <span class="form__input-error" id="newAvatar-error"></span>
           <input class="form__save" type="submit" value="Сохранить">
         </form>
-        <button class="popup__close" id="closeNewCardPopup" type="button" aria-label="Закрыть окно"></button>
+        <button class="popup__close" id="closeAvatarPopup" type="button" aria-label="Закрыть окно"></button>
       </section>
     </section>
     <section class="popup popup_type_confirm">
@@ -80,7 +80,7 @@
           <h2 class="form__title">Вы уверены?</h2>
           <input class="form__save" type="submit" value="Да">
         </form>
-        <button class="popup__close" id="closeEditProfilePopup" type="button" aria-label="Закрыть окно"></button>
+        <button class="popup__close" id="closeConfirmPopup" type="button" aria-label="Закрыть окно"></button>
       </section>
     </section>
   </main>
